--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
   font-size: 1rem;
   color: white;
 }
+.navbar-item:hover{
+	background: transparent !important;
+	color: white !important;
+}
 .navbar-item img {
   max-height: 10rem;
 }
