--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 .navbar {
 	background: transparent;
 }
+.navbar-burger {
+	color: white;
+}
 .navbar-item img {
   height: 3rem;
   width: auto;
@@ -61,6 +64,9 @@
 }
 .navbar-item img {
   max-height: 10rem;
+}
+.navbar-menu {
+	background: transparent;
 }
 
 @media screen and (max-width: 768px) {
@@ -89,17 +95,15 @@
 			  <img src="paran_logo.png">
 			</a>
 			<div
-			  :class="{ 'is-active': showNav }"
-			  data-target="navMenu"
+			data-target="navbarMenuHeroA"
 			  class="navbar-burger burger"
-			  @click="showNav = !showNav"
 			>
 			  <span aria-hidden="true" />
 			  <span aria-hidden="true" />
 			  <span aria-hidden="true" />
 			</div>
 		  </div>
-		  <div id="navMenu" :class="{ 'is-active': showNav }" class="navbar-menu">
+		  <div id="navMenu" class="navbar-menu">
 			<div class="navbar-end">
 			  <a class="navbar-item" href="/2020/social">
 				Social
@@ -134,7 +138,7 @@
 		let progress;
 		let currentFrame;
 
-		function setImages() {
+		async function setImages() {
 			for (let i = 1; i < totalImagesCount; i++) {
 				let imgElem = new Image();
 				imgElem.src = `./video/wave-${i}.jpg`;
@@ -171,7 +175,9 @@
 	   </script>
 
 	<script>
-		
+		$('.navbar-burger').click(function() {
+			$('#navMenu').toggleClass('is-active');
+		});
 	</script>
 	
 
