--- a/index.html
+++ b/index.html
@@ -1,202 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>2020 제 8회 선린인터넷고등학교 멀티미디어과 졸업전시회</title>
-	
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css">
-	<link rel="stylesheet" href="./video/carmen-sans-cufonfonts-webfont/style.css">
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		body {
-			height: 500vh;
-		}
-		body.before-load {
-			overflow-y: hidden;
-		}
-        .title {
-            z-index: 1;
-			font-family:'Carmen Sans Regular';
-			color: white;
-            font-size: 1rem;
-        }
-		.canvas {
-			z-index: -1;
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-		}
-		.text-box {
-			display: flex;
-			
-		}
-		.container {
-  margin-top: 4rem;
-  margin-bottom: 2rem;
-}
-.navbar {
-	background: transparent;
-}
-.navbar-burger {
-	color: white;
-}
-.navbar-item img {
-  height: 3rem;
-  width: auto;
-  margin-left: 2rem;
-}
-.navbar-item.brand-text {
-  font-weight: 300;
-}
-.navbar-item,
-.navbar-link {
-  font-size: 1rem;
-  color: white;
-}
-.navbar-item:hover{
-	background: transparent !important;
-	color: white !important;
-}
-.navbar-item img {
-  max-height: 10rem;
-}
-.navbar-menu {
-	background: transparent;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width; 
+    initial-scale=1; maximum-scale=1; user-scalable=0;" />
+    <title>2020 제 8회 선린인터넷고등학교 멀티미디어과 졸업전시회</title>
 
-@media screen and (max-width: 768px) {
-  .container {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
-  }
-  .navbar-item img {
-      height: 1.5rem;
-    }
-  }
-  .hero-box {
-	position: fixed;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-	</style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css">
+    <link rel="stylesheet" href="./video/carmen-sans-cufonfonts-webfont/style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body class="before-load">
-	<img id="init-image" src="video/wave-1.jpg" style="display:none;">
-	<header class="navbar">
-		<div class="container">
-		  <div class="navbar-brand">
-			<a class="navbar-item brand-text" href="/2020">
-			  <img src="paran_logo.png">
-			</a>
-			<div
-			data-target="navbarMenuHeroA"
-			  class="navbar-burger burger"
-			>
-			  <span aria-hidden="true" />
-			  <span aria-hidden="true" />
-			  <span aria-hidden="true" />
-			</div>
-		  </div>
-		  <div id="navMenu" class="navbar-menu">
-			<div class="navbar-end">
-			  <a class="navbar-item" href="/2020/social">
-				Social
-			  </a>
-			  <a class="navbar-item" href="/2020/contact">
-				Contact
-			  </a>
-			  <a class="navbar-item" href="/2020/exhibition">
-				Exhibition
-			  </a>
-			</div>
-		  </div>
-		</div>
-	  </header>
+    <header class="navbar">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item brand-text" href="/2020">
+                    <img src="paran_logo.png">
+                </a>
+                <div data-target="navbarMenuHeroA" class="navbar-burger burger">
+                    <span aria-hidden="true" />
+                    <span aria-hidden="true" />
+                    <span aria-hidden="true" />
+                </div>
+            </div>
+            <div id="navMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <a class="navbar-item" href="/2020/social">
+                        Social
+                    </a>
+                    <a class="navbar-item" href="/2020/contact">
+                        Contact
+                    </a>
+                    <a class="navbar-item" href="/2020/exhibition">
+                        Exhibition
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
-		<div class="hero-box">
-			<a href="http://sunrin.graphics/2020/exhibition/"><img src="hero.png"></a>
-		</div>
+    <div class="hero-box">
+        <a href="http://sunrin.graphics/2020/exhibition/"><img src="hero.png"></a>
+    </div>
 
-	<canvas id="canvas" class="canvas" width="1920" height="1080"></canvas>
-	
-	<script
-	src="https://code.jquery.com/jquery-3.5.1.min.js"
-	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-	crossorigin="anonymous"></script>
-	<script>
-		const canvas = document.querySelector('.canvas');
-		const context = canvas.getContext('2d');
-		const videoImages = [];
-		let totalImagesCount = 47;
-		let progress;
-		let currentFrame;
+    <canvas id="canvas" class="canvas" width="1920" height="1080"></canvas>
 
-		async function setImages() {
-			for (let i = 1; i < totalImagesCount; i++) {
-				let imgElem = new Image();
-				imgElem.src = `./video/wave-${i}.jpg`;
-				videoImages.push(imgElem);
-			}
-		}
-
-		function loop() {
-			progress = pageYOffset / (document.body.offsetHeight - window.innerHeight);
-			if (progress < 0) progress = 0;
-			if (progress > 1) progress = 1;
-
-			currentFrame = Math.round((totalImagesCount - 1) * progress);
-			context.drawImage(videoImages[currentFrame], 0, 0);
-
-			requestAnimationFrame(loop);
-		}
-
-		function init() {
-			console.log("init")
-			// document.documentElement.scrollTop = 0;
-			document.body.classList.remove('before-load');
-			context.drawImage(videoImages[0], 0, 0);
-
-
-			loop();
-		}
-		
-		$("html,body").animate({ scrollTop: 0 },0, async function(){
-			window.addEventListener('load', init);
-			await setImages();
-		});
-
-	   </script>
-
-	<script>
-		$('.navbar-burger').click(function() {
-			$('#navMenu').toggleClass('is-active');
-		});
-	</script>
-	
-
-	<script>
-		function resize(){    
-		  $("#canvas").outerHeight($(window).height()-$("#canvas").offset().top- Math.abs($("#canvas").outerHeight(true) - $("#canvas").outerHeight()));
-		}
-		$(document).ready(function(){
-		  resize();
-		  $(window).on("resize", function(){                      
-			  resize();
-		  });
-		});
-
-		$(window).scroll(function() {
-   if($(window).scrollTop() + $(window).height() == $(document).height()) {
-	window.location.replace("http://sunrin.graphics/2020/exhibition/");
-   }
-});
-		</script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script async src="js/scroll.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/canvas.js"></script>
 </body>
+
 </html>
